# haircut_simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  \  ]  compile_commands.json
.cache/clangd/index/: base_utility.cpp.0A07DC09AFC27D17.idx  base_utility.cpp.C9498B466849FDD5.idx  base_utility.hpp.16AE8EBDECB88F18.idx  base_utility.hpp.2C684893BBDA9587.idx  base_utility_test.cpp.A5936D473532D1D8.idx  base_utility_test.cpp.FF1CCC28B4DBACF1.idx  base_utility_test.hpp.AE1673708EFB4D91.idx  base_utility_test.hpp.DF02D52B8CAB876C.idx  event.cpp.6E9400EF7A2FB7FB.idx  event.cpp.7421FDCD4783DA2C.idx  event.hpp.43F50E7D94CC4475.idx  event.hpp.9C6C9CD85C26B921.idx  exception.hpp.3CC664999F18DEC1.idx  exception.hpp.538D07D96B3FEE7A.idx  main.cpp.82F98F046EE37FE1.idx  main.cpp.894CB3CC3FF7C48C.idx  main.cpp.E303D31C08D91465.idx
doc/: 1.md  2.md  class.md
src/backstage/: CMakeLists.txt  barber.cpp  base_utility.cpp  chair.cpp  customer.cpp  event.cpp  exception.cpp  factory.cpp  tracking.cpp
src/backstage/include/: barber.hpp  base_utility.hpp  chair.hpp  customer.hpp  event.hpp  event_manager.hpp  exception.hpp  factory.hpp  object_manager.hpp  tracking.hpp
src/io/: CMakeLists.txt  display.cpp  io_barchr.cpp  io_parameter.cpp
src/io/include/: display.hpp  io_barchr.hpp  io_parameter.hpp
src/main/: CMakeLists.txt  business_logic.cpp  business_loop.cpp  initial.cpp  main.cpp
src/main/include/: business_logic.hpp  initial.hpp
test/backstage/: CMakeLists.txt  base_utility_test.cpp  main.cpp
test/backstage/include/: base_utility_test.hpp  cust_barb_chr_test.hpp  event_manager_test.hpp  event_test.hpp  factory_test.hpp  object_manager_test.hpp  test_header.hpp
test/io/: CMakeLists.txt  main.cpp
test/io/include/: io_barchr_test.hpp  test_header.hpp
